Revision history for Thrift-API-HiveClient2

{{$NEXT}}

0.025 2024-06-27 BURAK
    Enable SSL support (Merge pull request #12 from Raj-18110/enable-ssl)

0.024 2019-02-12 BURAK
    Include the patch by Alexey Lebedeff
        "Use predicate to test for session handle presence".

0.023 2018-02-06 BURAK
    Distro fix for prereqs.

0.022 2018-01-30 BURAK
        Verbose type checks.
        Adding support for delegation token authentication (ashwin konale)
        Don’t try to close undefined transport during global destruction (Dave Cardwel)
        Cleanup dead code.
        Compatibility layer for the API changes.

0.021   2016-01-17
        Version up to solve cpan conflict after rejection

0.020   2016-01-13
        Removed .iml file
        Updated build dep for rpmbuild and older perl versions
        Added [GithubMeta] to dist.ini, so repo will appear in dist metadata
        Added link to github repo in the doc
        Moved socket timeout declaration
        Fixed column names filling
        Workaround for Thrift error messages (commented out, sigh)
        Added POD as README.md

0.019   2015-10-01
        Added get_tables method, outputs a list of tables with some details
        Added fetch_hashref, which returns a resultset keyed on column names

0.018   2015-09-30
        Added get_columns method, giving complete info on a table's columns

0.017   2015-05-14
        Merged burak's 45a06bba - Guard isa() checks with blessed().
        Tiny doc fix re/ SASL+PLAIN: canonuser, not user

0.016   2014-12-10
        PruneCruft didn't remove the files in the build dir, fixing that

0.015   2014-12-10 
        Other SASL mechanisms can be used, passed directly to the
        Authen::SASL object

0.014   2014-10-29
        Added Kerberos support

0.013   2014-02-10
        Fixed If hive returns errors, the values can be undef (Burak Gürsoy)

0.012   2013-08-21
0.011   2013-08-21
        Fixed CDH 4.3.0 bug (thanks to Stephen Sprague and Oleksiy Kovyrin)