@@ -6,11 +6,13 @@ copyright_year   = 2015
 
 [Prereqs]
 perl            = 5.010
-Thrift          = 0.10.0
-Moo             = 0
+
 Class::Accessor = 0
-Scalar::Util    = 0
+IO::Socket::SSL = 0
 List::MoreUtils = 0
+Moo             = 0
+Scalar::Util    = 0
+Thrift          = 0.10.0
 version         = 0
 
 [PodWeaver]
